[package]
name = "hitome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
argh = "0.1.7"

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
